Display a todo pre-populated in memory

--- a/lib/todo_mvc_web/templates/main/index.html.leex
+++ b/lib/todo_mvc_web/templates/main/index.html.leex
@@ -1,26 +1,42 @@
 <section class="todoapp">
-   <header class="header">
-     <h1>todos</h1>
-     <input class="new-todo" placeholder="What needs to be done?" autofocus>
-   </header>
-   <section class="main">
-     <input id="toggle-all" class="toggle-all" type="checkbox">
-     <label for="toggle-all">Mark all as complete</label>
-     <ul class="todo-list"></ul>
-   </section>
-   <footer class="footer">
-     <span class="todo-count"></span>
-     <ul class="filters">
-       <li>
-         <a href="#/" class="selected">All</a>
-       </li>
-       <li>
-         <a href="#/active">Active</a>
-       </li>
-       <li>
-         <a href="#/completed">Completed</a>
-       </li>
-     </ul>
-     <button class="clear-completed">Clear completed</button>
-   </footer>
- </section>
+  <header class="header">
+    <h1>todos</h1>
+    <input class="new-todo" placeholder="What needs to be done?" autofocus />
+  </header>
+  <section class="main">
+    <input id="toggle-all" class="toggle-all" type="checkbox" />
+    <label for="toggle-all">Mark all as complete</label>
+    <ul class="todo-list">
+      <%= for todo <- @todos do %>
+        <%= content_tag :li do %>
+          <div class="view">
+            <%= content_tag :input,
+              nil,
+              type: "checkbox",
+              class: "toggle"
+            %>
+            <label>
+              <%= todo.text %>
+            </label>
+            <button class="destroy"></button>
+          </div>
+        <% end %>
+      <% end %>
+    </ul>
+  </section>
+  <footer class="footer">
+    <span class="todo-count"></span>
+    <ul class="filters">
+      <li>
+        <a href="#/" class="selected">All</a>
+      </li>
+      <li>
+        <a href="#/active">Active</a>
+      </li>
+      <li>
+        <a href="#/completed">Completed</a>
+      </li>
+    </ul>
+    <button class="clear-completed">Clear completed</button>
+  </footer>
+</section>
