--- a/lib/todo_mvc_web/templates/layout/app.html.eex
+++ b/lib/todo_mvc_web/templates/layout/app.html.eex
@@ -1,53 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-framework="javascript">
-  <head>
-    <meta charset="utf-8" />
-    <title>Phoenix LiveView • TodoMVC</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css")
-    %>"/>
-  </head>
-  <body>
-    <section class="todoapp">
-      <header class="header">
-        <h1>todos</h1>
-        <input
-          class="new-todo"
-          placeholder="What needs to be done?"
-          autofocus
-        />
-      </header>
-      <section class="main">
-        <input id="toggle-all" class="toggle-all" type="checkbox" />
-        <label for="toggle-all">Mark all as complete</label>
-        <ul class="todo-list"></ul>
-      </section>
-      <footer class="footer">
-        <span class="todo-count"></span>
-        <ul class="filters">
-          <li>
-            <a href="#/" class="selected">All</a>
-          </li>
-          <li>
-            <a href="#/active">Active</a>
-          </li>
-          <li>
-            <a href="#/completed">Completed</a>
-          </li>
-        </ul>
-        <button class="clear-completed">Clear completed</button>
-      </footer>
-    </section>
-    <footer class="info">
-      <p>Double-click to edit a todo</p>
-      <p>
-        Created by
-        <a href="http://github.com/amencarini">Alessandro Mencarini</a>
-      </p>
-      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-    </footer>
-    <script
-      type="text/javascript"
-      src="<%= Routes.static_path(@conn, "/js/app.js") %>"
-    ></script>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Phoenix LiveView • TodoMVC</title>
+    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+	</head>
+	<body>
+		<%= render @view_module, @view_template, assigns %>
+		<footer class="info">
+			<p>Double-click to edit a todo</p>
+			<p>Created by <a href="http://github.com/ryanyogan">Ryan Yogan</a></p>
+			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+		</footer>
+    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+	</body>
 </html>
