Completed TodoMVC, now has plural/singular form, just using i18n helper...

--- a/lib/todo_mvc_web/templates/main/index.html.leex
+++ b/lib/todo_mvc_web/templates/main/index.html.leex
@@ -60,7 +60,9 @@
   </section>
   <%= if Enum.any?(@todos) do %>
     <footer class="footer">
-      <span class="todo-count"></span>
+      <span class="todo-count">
+        <%= active_todos_count(@todos) %>
+      </span>
       <ul class="filters">
         <li>
           <%= live_link "All",
